Testing new app features. git add www/! DO NOT PROMOTE git add www/!

--- a/www/assets/i18n/en.json
+++ b/www/assets/i18n/en.json
@@ -58,6 +58,11 @@
 		"Tag_Line": "HushTags - Leave Your Mark™"
 	},
 
+	"Dialog_Empty_Tag": {
+		"Title": "Nothing To See Here",
+		"Description": "That's odd.. It looks like there are no messages on this HushTag. Perhaps, try another."
+	},
+
 	"App_Menu": {
 		"Home": "Home",
 		"Help": "Help",
